# Curriculum-Manager

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  start-app.bat
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
