[package]
name = "course-check-app"
version = "0.1.0"
description = "Desktop credit tracker built with Tauri"
edition = "2024"

[lib]
name = "course_check_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
